<resources>
    <string name="app_name">Обмен валют</string>
    <string name="title_activity_add_advertisement">AddAdvertisementActivity</string>
    <string name="title_activity_show_entities">ShowEntitiesActivity</string>
    <string name="title_activity_show_ads_activity">ShowAdsActivity</string>
    <string name="title_activity_advertisement">AdvertisementActivity</string>
    <string name="title_activity_show_my_ads">ShowMyAdsActivity</string>
    <string name="title_activity_rates">Курсы валют</string>
    <string name="action_settings">Settings</string>
    <string name="appNameHeader">Обмен валют</string>
    <string name="lookingForMessage">Просмотреть обьявления о покупке и продаже вылюты.</string>
    <string name="btnShow">Просмотреть</string>
    <string name="addMessage">Оставить заявку на продажу или покупку валюты.</string>
    <string name="ratesMessage">Посмотреть текущие курсы валют.</string>
    <string name="btnAdd">Добавить обьявление</string>
    <string name="btnRates">Курсы валют</string>
    <string name="saleMessage">продать</string>
    <string name="buyMessage">купить</string>
    <string name="usdMessage">доллар</string>
    <string name="eurMessage">евро</string>
    <string name="rubMessage">рубль</string>
    <string name="sumMessage">Сумма:</string>
    <string name="rateMessage">Курс:</string>
    <string name="phoneMessage">Телефон:</string>
    <string name="areaMessage">Район города:</string>
    <string name="commentMessage">Комментарий:</string>
    <string name="alertTitleEmptyFields">Неправильно заполнены поля</string>
    <string name="alertSumMessage">Поле \"сумма\" должно содержать целое число.</string>
    <string name="alertRateMessage">Поле \"курс\" должно содержать число.</string>
    <string name="alertCityMessage">Выберите город.</string>
    <string name="alertPhoneMessage">Телефон должен быть введён в формате +380121234567</string>
    <string name="alertEmptyFieldMessage">Поля \"сумма\", \"курс\" и \"телефон\" обязательны к заполнению.</string>
    <string name="btnOk">OK</string>
    <string name="alertTitleInternetConnection">Ошибка соединения с интернетом</string>
    <string name="alertInternetConnectionMessage">Проверьте подключение к интернету.</string>
    <string name="sendMessage">Ваше обьявление опубликовано.</string>
    <string name="deleteMessage">Ваше обьявление успешно удалено.</string>
    <string name="emptyRatesMessage">Не удалось получить данные с сервера.</string>
    <string name="responseOk">OK</string>
    <string name="cityChoice">Выберите город</string>
    <string name="showCity">&gt;</string>
    <string name="region">область</string>
    <string name="region_name">region_name</string>
    <string name="region_id">region_id</string>
    <string name="city_name">city_name</string>
    <string name="tvCityContent">tvCityContent</string>
    <string name="searchSettings">Фильтр поиска</string>
    <string name="myAdsTitle">Мои обьявления</string>
    <string name="adsSaleMessage">Продам</string>
    <string name="adsBuyMessage">Куплю</string>
    <string name="adsUsdMessage">долларов</string>
    <string name="adsRubMessage">рублей</string>
    <string name="adsHeaderDate">Время</string>
    <string name="adsHeaderAction"></string>
    <string name="adsHeaderCurrency">Валюта</string>
    <string name="adsHeaderSum">Сумма</string>
    <string name="adsHeaderRate">Курс</string>
    <string name="searchSettingsTitle">Параметры поиска</string>
    <string name="btnDel">Удалить объявление</string>
    <string name="usdSign">$</string>
    <string name="euroSign">€</string>
    <string name="rubSign">P</string>
    <string name="cityArea">Район города:</string>
    <string name="phoneText">Номер телефона:</string>
    <string name="rateText">Курс</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="rub">RUB</string>
    <string name="ratesBuying">покупка</string>
    <string name="ratesSelling">продажа</string>
    <string name="rowBanks">В банках</string>
    <string name="rowMarket">Рыночный</string>
    <string name="rowNbu">НБУ</string>
    <string name="sendValueAdvertisement">Advertisement</string>
    <string name="sendValueJson">request json</string>
    <string name="sendValueClassName">className</string>
    <string name="nameShowAdsActivity">ShowAdsActivity</string>
    <string name="noAdsMessage">Нет объявлений</string>
    <string name="loadingMessage">Пожалуйста подождите, идёт получение данных&#8230;</string>
    <string name="removingMessage">Удаление&#8230;</string>
    <string name="addingMessage">Пожалуйста подождите&#8230;</string>
    <string name="makeCall">Позвонить</string>
    <string name="startPhoneNumber">+380</string>
    <string name="banner_ad_unit_id">ca-app-pub-4637654147607031/1396992108</string>
    <string name="interstitialAd_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>

