<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <include
        android:id="@+id/main_tool_bar"
        layout="@layout/main_tool_bar" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/show_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_tool_bar"
        android:layout_marginTop="10dp"
        android:background="@color/workingColor" >
        <TextView
            android:id="@+id/tvShowMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/lookingForMessage" />
        <Button
            android:id="@+id/btnShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnShow"
            android:layout_below="@+id/tvShowMessage"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/add_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_panel"
        android:layout_marginTop="20dp"
        android:background="@color/workingColor" >
        <TextView
            android:id="@+id/tvAddMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/addMessage" />
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAdd"
            android:layout_below="@+id/tvAddMessage"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>
