<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/toolbar"
    app:theme="@style/ThemeOverlay.AppCompat.Light">

    <TextView
        android:id="@+id/tvUsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/usd"
        android:textColor="@color/textColor"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />
    <TextView
        android:id="@+id/tvEur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/eur"
        android:textColor="@color/textColor"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp" />
    <TextView
        android:id="@+id/tvRub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/rub"
        android:textColor="@color/textColor"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="20dp" />

</android.support.v7.widget.Toolbar>